Revert "1. updates to tests to use Junit suite rather than testng 2. made test projects bundles 3. consolidated some of the test classes which had only one method 4. added test failures which were tracked in pom.xml into JUnitFailedTests "
This reverts commit 767b46a9f3574f5e1d716214eb5d5d7f44ccf9b0.