@@ -92,14 +92,31 @@
    <build>
 		<plugins>
 			<plugin>
-		      <groupId>org.eclipse.tycho</groupId>
-		         <artifactId>tycho-surefire-plugin</artifactId>
-		         <version>${tycho-version}</version>
-		         <configuration>
-		            <testSuite>org.ebayopensource.vjet.test.core.javatojs</testSuite>
-		            <testClass>org.ebayopensource.dsf.javatojs.tests.AllJavaToJsTests</testClass>
-		        </configuration>
-		      </plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.8.1</version>
+				<configuration>
+					<systemPropertyVariables>
+			            	<java.source.path>${java.source.path}</java.source.path>
+			        	</systemPropertyVariables>
+					<forkMode>always</forkMode>
+          				<trimStackTrace>false</trimStackTrace>
+          				<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+			        	<enableAssertions>false</enableAssertions>
+					<testFailureIgnore>false</testFailureIgnore>
+					<includes>
+						<include>**/*Test.java</include>
+						<include>**/*Tests.java</include>
+					</includes>
+					<excludes>
+						<exclude>**/All*Tests.java</exclude>
+						<exclude>**/*Base*.java</exclude>
+						<exclude>**/aexclude/*.java</exclude>
+						<!-- Not included in AllJavaToJsTests -->
+						<exclude>**/Js2JsRoundTripTests.java</exclude> 
+					</excludes>
+				</configuration>
+			</plugin>
 		</plugins>
    </build>
 </project>
